--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-    </head>
-    <body>
 
-    </body>
+<head>
+
+      <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+      <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
+      <link rel="stylesheet" type="text/css" href="styles.css"
+
+
+</head>
+
+<body>
+
+      <div id="map"> </div>
+      <script type="text/javascript" src="script.js"> </script>
+
+
+
+
+
+</body>
+
 </html>
