--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
       <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
       <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
-      <link rel="stylesheet" type="text/css" href="styles.css"
+
+      <link rel="stylesheet" type="text/css" href="styles.css" >
 
 
 </head>
@@ -14,7 +15,7 @@
 <body>
 
       <div id="map"> </div>
-      <script type="text/javascript" src="script.js"> </script>
+      <script type="text/javascript" src="scripts.js"> </script>
 
 
 
