--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 <body>
 
       <div id="map"> </div>
+
+      <div id='legend'>
+            <h4>Big Bend NP Trails</h4>
+            <ul>
+                <li><hr class="class1"> Class 1 trail: Minimally Developed</li>
+                <li><hr class="class2"> Class 2 trail: Moderately Developed</li>
+                <li><hr class="class3"> Class 3 trail: Developed</li>
+                <li><hr class="boundary"> Park boundary</li>
+            </ul>
+        </div>
+
+
       <script type="text/javascript" src="scripts.js"> </script>
 
 
