--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 
 <body>
 
+<h1>Big Bend National Park Hiking Trails </h1>
+
+
+<p> Big Bend National Park is beautiful wilderness area located in Southern Texas. The park offers over 150 miles to wander through.
+ Hikers can explore the desert land or travel up the mountain trails to visit beautiful flora and fauna, geology, and unique natural features. 
+ For those seeking solitdue or an adventure into the wilderness there are many oppurtuniteis for backpacking, river trips, or primitive camping. </p>
+
+ <br>
+
+ <p> Explore the trails of Big Bend Park on the interactive map below.  Source: National Park Service Open Data Portal </p>
+
+ <br>
+
+
+
       <div id="map"> </div>
 
       <div id='legend'>
