--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<h1>Big Bend National Park Hiking Trails </h1>
+<!-- <h1>Big Bend National Park Hiking Trails </h1>
 
 
 <p> Big Bend National Park is beautiful wilderness area located in Southern Texas. The park offers over 150 miles to wander through.
@@ -26,7 +26,7 @@
  <p> Explore the trails of Big Bend Park on the interactive map below.  Source: National Park Service Open Data Portal </p>
 
  <br>
-
+ -->
 
 
       <div id="map"> </div>
